--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div id="root"></div>
-    <!-- <script type="module" src="/src/main.tsx"></script> -->
-     <script type="module" src="/audio-serenity-haven/assets/..." ></script>
+    <script type="module" src="/src/main.tsx"></script>
+     <!-- <script type="module" src="/audio-serenity-haven/assets/..." ></script> -->
   </body>
 </html>
